[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.2.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
web-time = { version = "1.1.0", features = ["serde"] }
serde = "1.0.200"
serde_bare = "0.5.0"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
